# embedded_ipython

./: CMakeLists.txt  README
mantidplotlib/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mantidplotlib.sip
python/: CMakeLists.txt  mantidplot.py
python/widgets/: CMakeLists.txt  ipython_view.py
